# docs/swagger.json
@@ -2233,6 +2233,53 @@
             }
         },
         "/transactions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve a list of all transactions for the authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transactions"
+                ],
+                "summary": "Get all transactions for a user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Transaction"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -3053,6 +3100,9 @@
         "models.CarbonElectricResponse": {
             "type": "object",
             "properties": {
+                "electric_id": {
+                    "type": "integer"
+                },
                 "emission_amount": {
                     "type": "number"
                 },
@@ -3062,8 +3112,17 @@
                 "id": {
                     "type": "integer"
                 },
+                "price": {
+                    "type": "number"
+                },
+                "province": {
+                    "type": "string"
+                },
                 "total_consumption": {
                     "type": "number"
+                },
+                "unit": {
+                    "type": "string"
                 },
                 "usage_amount": {
                     "type": "number"
@@ -3319,6 +3378,9 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "province_id": {
+                    "type": "integer"
                 }
             }
         },
